add outside temp sensor

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,4 +23,5 @@ lib_deps =
 	powerbroker2/ELMDuino@^3.3.0
 	gyverlibs/Settings@^1.2.3
 	gyverlibs/EncButton@^3.7.1
+	milesburton/DallasTemperature@^3.11.0
 board_build.sdkconfig = sdkconfig
